# DCF77-Pi5

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gpio_conf/: gpio_current_drive.dts
include/: args.h  dcf77.h  hw_conf.h  net_ntp.h  version.h.in
src/: attenuator.c  carrier.c  dcf77-pi5.c  dcf77.c  net_ntp.c
